Still working on user auth

--- a/server/src/views/signup.pug
+++ b/server/src/views/signup.pug
@@ -1,7 +1,7 @@
 include ./includes/head
 if error
     p= error
-form(action="/signup", method="post")
+form(action="/signup", method="POST")
     label(for="email") Email 
     input(type="text" name="email" id="email" placeHolder="Your Email")
     label(for="name") Full Name
