--- a/server/src/views/login.pug
+++ b/server/src/views/login.pug
@@ -1,7 +1,8 @@
 include ./includes/head
-form(action="/signup", method="post")
+form(action="/login", method="POST")
     label(for="email") Email 
     input(type="text" name="email" id="email" placeHolder="Your Email")
     label(for="password") Password
-    input(type="password" name="password" id="password" placeHolder="Password")
+    input(type="password" name="password" id="password" placeHolder="Your Password")
+    button(type="submit") Submit
 include ./includes/footer
