--- a/server/src/dashboard/src/components/Navbar.module.css
+++ b/server/src/dashboard/src/components/Navbar.module.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 6rem;
+  padding: 1rem 2rem;
   background-color: #fed049;
   position: fixed;
   z-index: 999;
@@ -41,6 +41,7 @@
   border-radius: 50px;
   padding: 5px 10px;
   cursor: pointer;
+  position: relative;
   transition: all 0.3s;
 }
 
