Adding calendar control buttons

--- a/server/src/dashboard/src/components/Main.module.css
+++ b/server/src/dashboard/src/components/Main.module.css
@@ -10,3 +10,23 @@
   align-items: center;
   margin-bottom: 1rem;
 }
+
+.left,
+.calendar-control {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.left > *:not(:last-child) {
+  margin-right: 16px;
+}
+
+.calendar-control > *:not(:last-child) {
+  margin-right: 5px;
+}
+
+.icon {
+  font-size: 28px;
+  cursor: pointer;
+}
