--- a/server/src/dashboard/src/components/Navbar.module.css
+++ b/server/src/dashboard/src/components/Navbar.module.css
@@ -1,59 +1,11 @@
-.container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem 2rem;
-  background-color: #fed049;
-  position: fixed;
-  z-index: 999;
-  top: 0;
-  left: 0;
-  width: 100%;
-  border-bottom: 1px solid #000000;
-}
-
-.brand {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.brand .icon {
-  font-size: 2rem;
-  margin-right: 10px;
-}
-
-.brand .symbol {
-  align-self: flex-start;
+.symbol {
   font-size: 12px;
-  margin-left: 5px;
-  font-weight: lighter;
   opacity: 0.8;
+  margin-left: 5px;
+  align-self: flex-start;
 }
 
-.profile {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  color: #000000;
-  background-color: rgba(0, 0, 0, 0.05);
-  border-radius: 50px;
-  padding: 5px 10px;
-  cursor: pointer;
-  position: relative;
-  transition: all 0.3s;
-}
-
-.profile:hover {
-  background-color: rgba(0, 0, 0, 0.1);
-}
-
-.profile .icon1 {
-  font-size: 1.4rem;
-  margin-right: 3px;
-}
-
-.profile .icon2 {
-  font-size: 2rem;
+.email {
+  font-size: 12px;
+  opacity: 0.8;
 }
