--- a/server/src/dashboard/src/index.css
+++ b/server/src/dashboard/src/index.css
@@ -6,7 +6,7 @@
 
 body {
   margin: 0;
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f9f9f9;
